--- a/calc.css
+++ b/calc.css
@@ -8,12 +8,11 @@
 body{
     background-color: #deb887;
     font-family: 'Orbitron', sans-serif;
+    text-align:center;
 }
 
 #background{
-    display: block;
-    width: 40%;
-    height: 50vh;
+    display: inline-block;
     background-color: #dda965;
     margin: 10px auto;
     border-radius: 30px;
@@ -24,7 +23,7 @@ body{
     display: block;
     background-color: rgb(127, 255, 212, 0.6);
     width: 90%;
-    height: 10vh;
+    height: 2em;
     border-radius: 30px;
     text-align: right;
     margin: auto;
@@ -37,6 +36,7 @@ body{
     grid-template-columns: auto auto auto auto auto;
     grid-gap: 5%;
     margin: 5%;
+    margin-bottom: 40px;
 }
 
 .button{
@@ -48,6 +48,7 @@ body{
     border-radius: 10px;
     font-family: inherit;
     font-size: 2em;
+  
 }
 
 .button:hover{
